--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="buffer col-12"></div>
       <section class="text-center col-12">  
         <hr>
-          <a href="https://mailchi.mp/dfcd0c47c348/hmtech"><button class="btn btn-primary btn-xl">Find out Montserrat</button></a>
+          <a href="https://mailchi.mp/dfcd0c47c348/hmtech"><button class="btn btn-primary btn-xl">Find out More</button></a>
       </section>
     </div>
     </div>
